--- a/config_sample.env
+++ b/config_sample.env
@@ -1,20 +1,17 @@
-#Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 ## Telegram
-BOT_TOKEN = "" # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-OWNER_ID =
+BOT_TOKEN = "1930661270:AAH0d82I2gXQKfWcQF6EfK6bA2zaUzF_4Xo" # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
+OWNER_ID = 611167060
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
-AUTHORIZED_CHATS = "" #Separated by space
+TELEGRAM_API = 7358918
+TELEGRAM_HASH = "8d6e4dff1e370e11651cc19c74f8f948"
+AUTHORIZED_CHATS = "611167060 -528965083" #Separated by space
 MAX_CONCURRENT_DOWNLOADS = 4
 
 ## Drive
-GDRIVE_FOLDER_ID = ""
-IS_TEAM_DRIVE = ""
-INDEX_URL = ""
+GDRIVE_FOLDER_ID = "1dLoxlvnCmUTU_dy9h5dooN5HmDeSKf86"
+IS_TEAM_DRIVE = "True"
+INDEX_URL = "https://ranchiserver.ranchiserver.workers.dev"
 DOWNLOAD_DIR = "/app/downloads" #   Dont change this if you are using Docker compose
 USE_SERVICE_ACCOUNTS = ""
 
@@ -26,7 +23,7 @@ MEGA_USERNAME = ""
 MEGA_PASSWORD = ""
 BLOCK_MEGA_LINKS = ""
 
-STOP_DUPLICATE_MIRROR = ""
+STOP_DUPLICATE_MIRROR = "True"
 
 SHORTENER = ""
 SHORTENER_API = ""
